unpackaged/objects/SSIS_Integration_Log__c.object
<CustomObject>
  <fields>
    <fullName>Azure_Job_Finished__c</fullName>
    <description>The time the Azure job was finished.</description>
    <label>Azure Job Finished</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Azure_Job_Started__c</fullName>
    <description>The time the Azure job was started.</description>
    <label>Azure Job Started</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Execution_Type__c</fullName>
    <description>The type of execution. Automatic, manually</description>
    <label>Execution Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Finish_time__c</fullName>
    <label>Finish time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>SSIS_Application_Execution_Instance_Id__c</fullName>
    <description>The unique Identifier for the SSIS integration job.</description>
    <externalId>true</externalId>
    <label>SSIS Application Execution Instance Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Start_time__c</fullName>
    <label>Start time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <description>The status of the integrationjob. Running, finished, failed.....</description>
    <label>Status</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <label>SSIS Integration Log</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Start_time__c</columns>
    <columns>Finish_time__c</columns>
    <columns>Execution_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Azure_Job_Finished__c</columns>
    <columns>Azure_Job_Started__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>SSIS Integration Log Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SSIS Integration Logs</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>